# 6AxisPathPlanner

./: .gitignore  6AxisPathPlanner.sln  6AxisPathPlanner.vcxproj  6AxisPathPlanner.vcxproj.filters  CMakeLists.txt  DataStructs.h  MeshIntersect.h  PathExporter.h  PolylineSimplifier.h  README.md  Renderer.h  Settings.h  ToolpathGenerator.h  biebaboe.txt  imgui.ini  main.cpp  testToolPath.txt  testToolPath1.txt
cavc/: plane.hpp  plinesegment.hpp  polyline.hpp  polylinecombine.hpp  polylineintersects.hpp  polylineoffset.hpp  polylineoffsetislands.hpp  vector.hpp  vector3.hpp
cavc/internal/: diagnostics.hpp
include/core/: mathutils.hpp  vector.hpp  vector2.hpp  vector3.hpp
models/: RACING_VELO_G_BIRD.mtl  ligfietsbak-bottom.mtl  ligfietsbak-top.mtl
output/: FirstTopKapMillingPath.txt  KapBottom-Clearing-Pass-v1.txt  KapBottom-Clearing-Pass-v2.txt  KapBottom-Final-Pass-v1.txt  KapBottom-Final-Pass-v2.txt  KapTop2Path-Clearing-Pass-v2.txt  KapTop2Path-Final-Pass-v2.txt  KapTopPath-Final-Pass-v2  KapTopPath-Stock-Face-v2.txt  KapTopPath-v2.txt  ligfiets-kap-v2.txt  ligfietskap-top-v1.txt  testRobotCalibration.txt  testToolPath1.txt  testToolPath2.txt
resources/: KRLExternalControl.src  PCodeSender.cpp
resources/assets/: Gizmo.mtl  cube.mtl
resources/shaders/: compile.bat  compositeShader.frag  frag.spv  lineFrag.spv  lineShader.frag  lineShader.vert  lineVert.spv  shader.frag  shader.vert  vert.spv
resources/shaders/curveShaders/: curveTransparentShader.vert  lineShader.frag  opaqueShader.frag  opaqueShader.vert  transparentShader.frag
resources/shaders/objectShaders/: compositeShader.frag  compositeShader.vert  objectOpaqueShader.frag  objectTransparentShader.frag  opaqueShader.frag  transparentShader.frag  transparentShader.vert
resources/shaders/output/: compositeObjectShaderFrag.spv  compositeObjectShaderVert.spv  compositeShaderFrag.spv  frag.spv  lineShaderVert.spv  opaqueCurveShaderFrag.spv  opaqueCurveShaderVert.spv  opaqueObjectShaderFrag.spv  opaqueShaderFrag.spv  transparentCurveShaderFrag.spv  transparentCurveShaderVert.spv  transparentObjectShaderFrag.spv  vert.spv
shaders/: frag.spv  lineShader.vert  lineVert.spv  shader.frag  shader.vert  vert.spv
src/: Renderer.cpp  Renderer.hpp  main.cpp  meshIntersect.cpp  meshIntersect.hpp  meshIntersectGUI.hpp  robotGUI.hpp  robotKinematics.cpp  robotKinematics.hpp  toolPath2_5D.cpp  toolPath2_5D.hpp  toolPath2_5DGUI.hpp
src/core/: mathUtils.hpp  mathutils.hpp  objectShape.hpp  plane.hpp  polyline.hpp  polylineExport.hpp  polylineVertex.hpp  staticSpatialIndex.hpp  vector.hpp  vector2.hpp  vector3.hpp
src/core/intersect/: LineLineIntersect.hpp  circleCircleIntersect.hpp  circleLineIntersect.hpp  polylineCombine.hpp  polylineIntersects.hpp
src/core/offsets/: polylineOffset.hpp  polylineOffsetIslands.hpp
src/gui/: ImGuiAdditions.hpp  pathPlannerGUI.hpp  toolPath2_5DGUI.hpp  toolPathGUIBase.hpp
src/gui/testing/: meshIntersectGUI.hpp  meshIntersectGUITest.hpp  robotGUI.hpp  robotGUITest.hpp  toolPath2_5DGUITest.hpp
src/renderer/core/: RenderCoreTypes.cpp  RenderCoreTypes.hpp  RenderEngine.cpp  RenderEngine.hpp  VulkanInternals.hpp
src/renderer/geometries/: RendererCurve.cpp  RendererCurve.hpp  RendererGeometryBase.cpp  RendererGeometryBase.hpp  RendererObject.cpp  RendererObject.hpp
src/renderer/gui/: pathPlannerGUI.hpp  toolPath2_5DGUI.hpp  toolPathGUIBase.hpp
src/renderer/gui/testing/: meshIntersectGUITest.hpp  robotGUITest.hpp  toolPath2_5DGUITest.hpp
